[project]
name = "dba-agent-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.19",
    "langchain-pinecone>=0.2.8",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pinecone>=7.0.2",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "resend>=2.10.0",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
